# Mini-delta-robot

./: .gitignore  README.md
deltarobot/: CMakeLists.txt
deltarobot/include/: DeltaRobotControl.h  DeltaRobotDataType.h  DeltaRobotKinematics.h  DeltaRobotMath.h  DeltaRobotMotionPlanning.h
deltarobot/src/: DeltaRobotControl.cpp  DeltaRobotKinematics.cpp  DeltaRobotMath.cpp  DeltaRobotMotionPlanning.cpp
example/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
example/src/advanced/: actuator_test1.cpp  deltarobot_posctl_test1.cpp  deltarobot_test1.cpp  deltarobot_velctl_test1.cpp
example/src/basic/: 02a_enableSingleActuator.cpp  03a_currentControl.cpp
